random over generator added

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
             </div>
             <div class='row'>
                 <form action="/random/over" method="POST">
-                    <button style='margin:8px' type='submit' name='team' value='1' class='btn btn-primary'>Generate random
+                    <button style='margin-top:8px' type='submit' name='team' value='1' class='btn btn-primary'>Generate random
                         over</button>
                 </form>
                 <form action="/submit/over" method="POST">
@@ -94,7 +94,7 @@
             </div>
             <div class='row'>
                 <form action="/random/over" method="POST">
-                    <button style='margin:8px' type='submit' name='team' value='2' class='btn btn-primary'>Generate random over</button>
+                    <button style='margin-top:8px' type='submit' name='team' value='2' class='btn btn-primary'>Generate random over</button>
                 </form>
                 <form action="/submit/over" method="POST">
                     <button style='margin:8px' type='submit' name='team' value='2' class='btn btn-primary'>Submit
